--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="download_started">Download Started</string>
     <string name="download_failed">Download Failed, try again</string>
     <string name="remove">Remove</string>
+    <string name="remove_song">Remove Song</string>
 </resources>
