--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="download_failed">Download Failed, try again</string>
     <string name="remove">Remove</string>
     <string name="remove_song">Remove Song</string>
+    <string name="song_details">Song Details</string>
 </resources>
