feat: Profile screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="remove_song">Remove Song</string>
     <string name="song_details">Song Details</string>
     <string name="exit">Exit</string>
+    <string name="profile">Profile</string>
+    <string name="id">User Id</string>
 </resources>
