--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="save_credentials">Save credentials</string>
     <string name="register">Register</string>
     <string name="register_here">Register Here</string>
+    <string name="access_here">Access Here</string>
     <string name="password_required">Password is required</string>
     <string name="repeat_password_required">Repeat the password is required</string>
     <string name="email_required">Email is Required</string>
@@ -33,4 +34,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="login">Login</string>
     <string name="logo">logo</string>
+    <string name="repeat_password">Repeat Password</string>
 </resources>
