fix: Navigation not working when opening a screen that is not in the bottomMenu
To fix this problem, I set manually the navigation ids on the bottomMenu. See: https://stackoverflow.com/questions/71089052/android-navigation-component-bottomnavigationviews-selected-tab-icon-is-not-u

--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -45,4 +45,7 @@
     <string name="playlist_home">Home della Playlist</string>
     <string name="select_playlist_songs">Seleziona Canzoni della Playlist</string>
     <string name="save_songs">Salva Canzoni</string>
+    <string name="not_results_found_try_start_searching_something">Nessun risultato trovato, prova a cercare qualcosa</string>
+    <string name="not_results_found_try_download_a_new_song">Nessuna canzone trovata, prova a scaricare una nuova canzone</string>
+    <string name="find_a_new_song">Trova una Nuova Canzone</string>
 </resources>
