feat: Download progress bar on Notification Bar
Adding each download on Notification Bar, also verifying if the download is finished, the system will try 10 times to download the song from the server, if we get 10 times with no successful download, a error message will apper on the notification.

Issue: https://github.com/GeovaniTech/ListenNow-App/issues/16

--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -48,4 +48,5 @@
     <string name="not_results_found_try_start_searching_something">Nessun risultato trovato, prova a cercare qualcosa</string>
     <string name="not_results_found_try_download_a_new_song">Nessuna canzone trovata, prova a scaricare una nuova canzone</string>
     <string name="find_a_new_song">Trova una Nuova Canzone</string>
+    <string name="download_resquest_has_started">Download has started successfully</string>
 </resources>
