--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,9 @@
     <string name="find_a_new_song">Find a New Song</string>
     <string name="download_resquest_has_started">Download has started successfully</string>
     <string name="download_completed">Download Completed Successfully!</string>
+    <string name="fragment_error_somethint_went_wrong_title">Something went wrong</string>
+    <string name="fragment_error_retry">Try again</string>
+    <string name="fragment_error_title">Erro Screen</string>
+    <string name="message_error_creating_user">We apologize for the inconvenience. A problem occurred while creating your device ID on our servers. Please check your internet connection and try again.</string>
+    <string name="message_failed_to_save_user">Failed to save device ID</string>
 </resources>
