feat: Loading Songs from Album
Issue: https://github.com/GeovaniTech/ListenNow-App/issues/32

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,5 @@
     <string name="download_new_version_apk">Download ListenNow %s</string>
     <string name="new_version_is_being_donwloaded">ListenNow update is being downloaded</string>
     <string name="albums">Albums</string>
+    <string name="album_songs">Album Songs</string>
 </resources>
