--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,14 @@
     <string name="cd_empty_state_people_looking_for_something">A wowen looking for something</string>
     <string name="albums_no_albums_found_empty_state">No Albums found</string>
     <string name="albums_search_bar_hint">Search for album or artist name</string>
+    <string name="albums_see_playlists">See Playlists</string>
+    <string name="playlists_new_playlist">New Playlist</string>
+    <string name="playlists_search_bar_hint">Search for playlist or song name</string>
+    <string name="albums_no_playlists_found_empty_state">No playlists found</string>
+    <string name="playlists_title">Playlists</string>
+    <string name="playlists_new_playlist_title">Title</string>
+    <string name="playlists_new_playlist_save">Save</string>
+    <string name="playlists_new_playlist_cancel">Cancel</string>
+    <string name="playlists_new_playlist_msg_title_is_required">You need to specify a title for playlist</string>
+    <string name="playlists_new_playlist_msg_playlist_saved">Playlist %s saved successfully.</string>
 </resources>
