fix: Label no artists found to not show null Issue: https://github.com/GeovaniTech/ListenNow-App/issues/33

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,5 @@
     <string name="playlists_item_total_songs">%d Song(s)</string>
     <string name="playlists_item_artists">Artist(s): %s</string>
     <string name="playlistS_msg_playlist_deleted">Playlist deleted.</string>
+    <string name="playlists_no_artists_found">No artists found</string>
 </resources>
