feat: Adding ignoreIds to SelectSongsFragment
Issue: https://github.com/GeovaniTech/ListenNow-App/issues/40

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,5 @@
     <string name="select_amount_songs">%1$d selected</string>
     <string name="select_songs_msg_select_at_least_one_song">Select at least one song for your Playlist</string>
     <string name="playlist_songs_songs_added_success">Wow. The songs you added are sooooo good!</string>
+    <string name="select_songs_empty_state">No song found, try finding a new one</string>
 </resources>
