feat: Button to delete song from playlist
Issue: https://github.com/GeovaniTech/ListenNow-App/issues/56

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,4 +115,5 @@
     <string name="no_title">No Title</string>
     <string name="no_artist">No Artist</string>
     <string name="start_car_mod">Start Car Mode</string>
+    <string name="playlist_songs_song_deleted_message">Song deleted successfully</string>
 </resources>
